--- a/indico/modules/events/registration/templates/pdf/participants_book.html
+++ b/indico/modules/events/registration/templates/pdf/participants_book.html
@@ -33,17 +33,9 @@
         </div>
         <div class="sub-section">
             <h2>{%- trans %}Registration Details{% endtrans -%}</h2>
-            {% set static_items_order = [
-            "Registration Date",
-            "Registration State",
-            "Price",
-            "Checked in",
-            "Check-in Date",
-            "Tags"
-            ] %}
             <div class="registration-details">
-                {% for header in static_items_order if header in static_headers %}
-                    <p><strong>{{ header }}:</strong> {{ row[header] }}</p>
+                 {% for item_id in static_headers %}
+                    <p><strong>{{ static_column_names[item_id] }}:</strong> {{ row[item_id] }}</p>
                 {% endfor %}
             </div>
         </div>
